# TelegramBot

./: .env.dist  .gitignore  README.md  docker-compose.yml  flow.py  pyproject.toml  requirements.txt
TelegramBotFlow/: .env.dist  flow.py
TelegramBotFlow/crews/TexttoPhoto_crew/: text_to_photo.py
TelegramBotFlow/crews/TexttoSpeech_crew/: text_to_speech.py
TelegramBotFlow/crews/VoiceDecision_crew/: voice_decision.py
TelegramBotFlow/crews/VoiceWithPhoto_crew/: voice_with_photo.py
TelegramBotFlow/docker/python/: Dockerfile
crews/CommonConfig/: agents.yaml
crews/PhotoDecision_crew/: photo_decision.py
crews/PhotoDecision_crew/config/: agents.yaml  tasks.yaml
crews/TextResponse_crew/: text_response.py
crews/TextResponse_crew/config/: tasks.yaml
crews/TextWithPhoto_crew/config/: tasks.yaml
crews/TexttoPhoto_crew/: text_to_photo.py
crews/TexttoPhoto_crew/config/: agents.yaml  tasks.yaml
crews/TexttoSpeech_crew/: text_to_speech.py
crews/TexttoSpeech_crew/config/: tasks.yaml
crews/VoiceDecision_crew/config/: agents.yaml  tasks.yaml
crews/VoiceWithPhoto_crew/: voice_with_photo.py
crews/VoiceWithPhoto_crew/config/: tasks.yaml
db/: db_read.py  redis_connection.py
messagehandlingflow/: README.md  pyproject.toml
messagehandlingflow/src/messagehandlingflow/: main.py
src/deneme/: crew.py  flow.py  flow2.py  main.py  process_pending_messages.py  telegram_bot.py
src/deneme/config/: agents.yaml  tasks.yaml
src/deneme/db/: db_read.py
src/deneme/tools/: custom_tool.py  elevenlabs_tool.py
tools/: dalle_tool.py
(+23 files in other folders)
