[project]
name = "deneme"
version = "0.1.0"
description = "deneme using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
deneme = "deneme.main:run"
run_crew = "deneme.main:run"
train = "deneme.main:train"
replay = "deneme.main:replay"
test = "deneme.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
